:icons: font

= Gentics Mesh Changelog

== 0.11.7 (TBD)

icon:plus[] REST: The `hostname` and `ssl` properties have been added to the project create request. This information will be directly added to the initial release of the project. The properties can thus be changed by updating the project.

icon:plus[] REST: The link resolver mechanism was enhanced to also consider the `hostname` and `ssl` flag of the release of the node which is linked. 
                  The link resolver will make use of these properties as soon as mesh links point to nodes of foreign projects. 

== 0.11.6 (15.12.2017)

icon:plus[] Search: The automatic recreation of the search index will now also occur if an empty search index folder was found.

icon:check[] UI: Nodes are now always reloaded when the edit button is clicked in the explorer content list. link:https://github.com/gentics/mesh-ui/issues/16[#16]

icon:check[] UI: Fixed an issue that was causing a click on a node in the explorer list to open it like a container, even if it is not a container.

icon:check[] UI: Dropdowns for required string fields with the allowed attribute now properly require a value to be set in order to save the node.

icon:check[] UI: Fixed a issue where contents of a micronode were not validated before saving a node.

icon:check[] Core: Reduce the memory load of the ChangeNumberStringsToNumber-changelog by reducing the size of a single transactions.

icon:check[] Image: Image handling has been optimized. Previously resizing larger images could temporarily lock up the http server.

== 0.11.5 (14.12.2017)

icon:plus[] UI: Add multi binary upload dialog. Users can now upload multiple files at once by clicking the button next to the create node button.

icon:plus[] UI: Binary fields can now be used as display fields. The filename is used as the display name for the node. link:https://github.com/gentics/mesh-ui/issues/11[#11]
